--- a/api/.env.example
+++ b/api/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://user:password@host:port/database"
+DATABASE_URL="postgresql://user:password@host:5432/database"
 SUPABASE_URL="https://your-project.supabase.co"
 SUPABASE_SERVICE_ROLE_KEY="your-service-role-key"
 PORT=4000
