configurations of environment path made

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://user:password@host:5432/database"
+DATABASE_URL="postgresql://postgres.iedqrudjltmmpzpqrqgn:Lionnel10pa@aws-1-eu-north-1.pooler.supabase.com:6543/postgres"
 SUPABASE_URL="https://your-project.supabase.co"
 SUPABASE_SERVICE_ROLE_KEY="your-service-role-key"
 PORT=4000
